.provarCaches/00D0N000000hpkBUAQ/objects/provarti__ProvarCISettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration settings for the optional callout to a CI server based on an event defined locally in the subscriber org.</description>
    <fields>
        <fullName>provarti__API_Token__c</fullName>
        <description>The API Token is used to authenticate the CI Username for access to carry out the build.</description>
        <inlineHelpText>API Token for the CI Username, not the Password</inlineHelpText>
        <label>API Token</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provarti__Authentication_Token__c</fullName>
        <description>The authentication token for the build to be executed remotely</description>
        <inlineHelpText>If required, the authentication token that needs to be passed for the corresponding CI Job name to be executed</inlineHelpText>
        <label>Authentication Token</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>provarti__CI_Server_URL__c</fullName>
        <description>The CI Server URL to be called excluding any user authentication or parameters, e.g. http://ec2-user@ec2-35-242-69-170.eu-west-1.compute.amazonaws.com:8080/job/</description>
        <inlineHelpText>Enter the CI Server URL to be called excluding any user details or parameters</inlineHelpText>
        <label>CI Server URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>provarti__CI_Username__c</fullName>
        <description>Username used to authenticate against the CI Server in order to call the API for a remote build. This should ideally be a separate user with limited permissions rather than the admin user for your CI server.</description>
        <inlineHelpText>Username to be used for remote API calls to the CI Server URL</inlineHelpText>
        <label>CI Username</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Provar CI Settings</label>
</CustomObject>